--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend para el blog de recetas",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "babel-node index.js",
+    "dev":"nodemon --exec babel-node index.js"
   },
   "author": "Garcia Mauro Nicolas",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "babel-preset-env": "^1.7.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mongoose": "^6.5.4",
     "morgan": "^1.10.0"
   }
 }
